--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "funfic",
   "version": "0.0.1",
-  "license": "Simplified BSD License",
+  "license": "GPL-3.0",
   "readme": "./README.md",
   "dependencies": {
     "mime": "latest",
     "notion-node": "0.0.4",
-    "socket.io": "latest"
+    "socket.io": "^1.4.4",
+    "socket.io-client": "^1.4.8"
   },
   "devDependencies": {
     "mocha": "latest"
