--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "author": "Sean T. McBeth <sean.mcbeth@gmail.com> (http://www.seanmcbeth.com)",
   "main": "./small-town.js",
   "scripts": {
-    "start": "node server --path=web/",
-    "test": "mocha"
+    "start": "node server",
+    "test": "node server --path=. --url=/ --mode=dev"
   }
 }
